adjust height in faq kiso

--- a/public/templates/info/faq-kiso-de.html
+++ b/public/templates/info/faq-kiso-de.html
@@ -5,10 +5,8 @@
         Ab wann kann ich mein Kind anmelden?  <span class="caret"></span>
     </button>
     <div class="collapse" id="collapse1">
-    <div class="well" style="min-height:400px;">
+    <div class="well">
     Die Anmeldungen beginnen am Dienstag, 2. März pünktlich um 19.00 Uhr. Erst in diesem Moment erscheint unter dem Menüfeld "Anmeldungen" das entsprechende Google-Formular. UM SICH ANMELDEN ZU KÖNNEN, MÜSSEN SIE ÜBER EIN BENUTZERKONTO VERFÜGEN UND EINGELOGGT SEIN!
-    <!--<img src="./../../../../assets/screen/kiso_screen_reg1-de.jpg" alt="Registrierung1" style="height:300px;float:left;margin-right:15px" />
-    <img src="./../../../../assets/screen/kiso_screen_reg2-de.jpg" alt="Registrierung2" style="height:300px;float:left;margin-right:15px" />-->
     </div>
     </div>
     <br />
