--- a/public/templates/info/faq-kiso-it.html
+++ b/public/templates/info/faq-kiso-it.html
@@ -5,10 +5,8 @@
         Quando posso iscrivere mio figlio?  <span class="caret"></span>
     </button>
     <div class="collapse" id="collapse10">
-    <div class="well" style="min-height:400px;">
+    <div class="well">
         Le iscrizioni iniziano martedì 2 marzo alle 19.00 in orario. Solo in questo momento l’apposito modulo google apparirà nel campo di menu "Iscrizioni". PER POTERSI ISCRIVERE, È NECESSARIO AVERE UN ACCOUNT UTENTE ED ESSERE CONNESSI!
-        <!--<img src="./../../../../assets/screen/kiso_screen_reg1-it.jpg" alt="Registrierung1it" style="height:300px;float:left;margin-right:15px" />
-        <img src="./../../../../assets/screen/kiso_screen_reg2-it.jpg" alt="Registrierung2it" style="height:300px;float:left;margin-right:15px" />-->
     </div>
     </div>
     <br />
