it translation new form

--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -59,7 +59,7 @@
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdT1RbfCzE31cYqC_RsK8EtySSRaPDZlhmmqF6RQzSxRm595A/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" style="position: absolute;" onload="scroll(0,0)">Wird geladen…</iframe>
 </div>
 <div ng-show="(platform.isKiso() && canReserveKiso() && lang == 'it') || (platform.isTest() && lang == 'it')">
-    <button class="btn btn-primary" ng-click="reload()">neues Formular öffnen</button>
+    <button class="btn btn-primary" ng-click="reload()">aprire un nuovo modulo</button>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSepf8YXPV14N7INGV6pnC9Ox12uDwwB-r1Dy291gqm5_bIHbA/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" style="position: absolute;" onload="scroll(0,0)">Wird geladen…</iframe>
 </div>
 </div>
