bug fix single/all payment

--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -26,7 +26,7 @@
     </div>
 </div> -->
 
-<div ng-show="!platform.isKiso() && !platform.isTest()">
+<div ng-show="!platform.isKiso()">
 <div ng-repeat='loc in locations'>
     <div class='card-orange'>
         <a class='invisible-link' href='#/events/{{encodeFullURI(loc._id)}}'>
