payment mail jdbl

--- a/public/templates/info/info-jdbl-it.html
+++ b/public/templates/info/info-jdbl-it.html
@@ -10,6 +10,6 @@
 		<li><strong>Bambini con bisogni speciali:</strong> il Servizio Giovani Bozen-Land si impegna a integrare nei suoi programmi i bambini con disabilità fisiche/cognitive. I bambini che a causa delle loro condizioni hanno bisogno di cure particolari saranno affiancati, per quanto possibile, da un ulteriore accompagnatore. Al momento della registrazione si prega di includere una breve descrizione della problematica nell’apposito riquadro. Tutti gli ulteriori dettagli saranno chiariti nel corso di un colloquio personale in primavera.</li>
 	</ul>
 	<h3>Domande?</h3>
-	<a href="sommer@jugenddienst.it">sommer@jugenddienst.it</a><br />
+	<a href="sommer@jugenddienst.com">sommer@jugenddienst.com</a><br />
 	<strong>Jasmin</strong> (Tel. <a href='tel:+3473340181'>+3473340181</a>)
 </div>
