--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -130,7 +130,7 @@
 
 	<a ng-show="!platform.isJugendsommer()" download="report.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'datatable', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
 	<a ng-show="platform.isJugendsommer()" download="report.xls" href="#" onclick="return ngTableExcelExport.excel(this, 'datatable_js', 'Sheet1');"><span class='glyphicon glyphicon-share' style='margin-left:10px'></span> Export to Excel</a>
-	<div style="margin-left:10px"><span class="badge">{{registrations.length}}</span>  Anmeldungen geladen</div>
+	<div style="margin-left:10px"><span class="badge">{{registrations.length}}</span>  Anmeldungen geladen (<span class="badge">{{distinctCount}}</span> Kinder)</div>
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
 	<table class='table table-striped table-bordered tbl-serial4'>
 		<tr>
@@ -154,11 +154,11 @@
 				<div ng-show="isBatchUpdateAllowed()"><input type="checkbox" ng-checked="masterIsPaymentDone" ng-model="masterIsPaymentDone" ng-change="batchUpdateIsPaymentDone()" /></div>
 			</th>
 			<th>Benachrichtigt</th>
-			<th>Refundiert</th>
+			<th ng-show='!platform.isJugendsosmmer()'>Refundiert</th>
 			<th>zuerst Warteliste</th>
-			<th ng-show='platform.isJugendsommer() || platform.isTest()'>Verschieben</th>
+			<!-- <th ng-show='platform.isJugendsommer() || platform.isTest()'>Verschieben</th>
 			<th ng-show='platform.isJugendsommer() || platform.isTest()'>nicht erreicht</th>
-			<th ng-show='platform.isJugendsommer() || platform.isTest()'>Warteliste</th>
+			<th ng-show='platform.isJugendsommer() || platform.isTest()'>Warteliste</th> -->
 			<th>RechnungsNr</th>
 			<th>Betrag</th>
 			<th ng-show='platform.isKiso()'>Aufpreis</th>
@@ -204,9 +204,9 @@
 			<th ng-show='platform.isJDUL()'>Kommentar Intern</th>
 			<th>Media</th>
 			<th ng-show='platform.isKiso()'>News</th>
-			<th ng-show='platform.isJugendsommer()'>eigens EBike</th>
+			<!-- <th ng-show='platform.isJugendsommer()'>eigens EBike</th>
 			<th ng-show='platform.isJugendsommer()'>Körpergröße</th>
-			<th ng-show='platform.isJugendsommer()'>Instrument</th>
+			<th ng-show='platform.isJugendsommer()'>Instrument</th> -->
 			<th ng-show='platform.isJugendsommer()'>Wunschfreund(in)</th>
 			<th ng-show='platform.isJDUL()'>Prio Arbeit</th>
 			<th ng-show='platform.isJDUL()'>Prio Sozial</th>
@@ -233,11 +233,11 @@
 			<td ng-show='activityIdFilter'><input type='checkbox' ng-model='reg.isPrioDown' ng-change='updateProperty(reg._id, "isPrioDown", reg.isPrioDown)' style='margin-right:8px'>{{formatBool(reg.isPrioDown)}}</td>
 			<td ng-class='{"bg-success": reg.isPaymentDone, "bg-danger": !reg.isPaymentDone}'><input type='checkbox' ng-model='reg.isPaymentDone' ng-change='updateIsPaymentDone(reg._id, reg.isPaymentDone)' style='margin-right:8px' />{{formatBool(reg.isPaymentDone)}}</td>
 			<td ng-class='{"bg-success": reg.isEmailNotified, "bg-danger": !reg.isEmailNotified}'><input type='checkbox' ng-model='reg.isEmailNotified' ng-change='updateIsEmailNotified(reg._id, reg.isEmailNotified)' style='margin-right:8px' />{{formatBool(reg.isEmailNotified)}}</td>
-			<td><input type='checkbox' ng-model='reg.isRefunded' style='margin-right:8px' ng-change='updateProperty(reg._id, "isRefunded", reg.isRefunded)' />{{formatBool(reg.isRefunded)}}</td>
+			<td ng-show='!platform.isJugendsosmmer()'><input type='checkbox' ng-model='reg.isRefunded' style='margin-right:8px' ng-change='updateProperty(reg._id, "isRefunded", reg.isRefunded)' />{{formatBool(reg.isRefunded)}}</td>
 			<td>{{formatBool(reg.wasWaiting)}}</td>
-			<td ng-show='platform.isJugendsommer() || platform.isTest()' style="background-color:bisque;"><input type='checkbox' ng-model='reg.transferStatus.move' style='margin-right:8px' ng-change='updateProperty(reg._id, "transferStatus.move", reg.transferStatus.move)' />{{formatBool(reg.transferStatus.move)}}</td>
+			<!--<td ng-show='platform.isJugendsommer() || platform.isTest()' style="background-color:bisque;"><input type='checkbox' ng-model='reg.transferStatus.move' style='margin-right:8px' ng-change='updateProperty(reg._id, "transferStatus.move", reg.transferStatus.move)' />{{formatBool(reg.transferStatus.move)}}</td>
 			<td ng-show='platform.isJugendsommer() || platform.isTest()' style="background-color:bisque;"><input type='checkbox' ng-model='reg.transferStatus.unavailable' style='margin-right:8px' ng-change='updateProperty(reg._id, "transferStatus.unavailable", reg.transferStatus.unavailable)' />{{formatBool(reg.transferStatus.unavailable)}}</td>
-			<td ng-show='platform.isJugendsommer() || platform.isTest()' style="background-color:bisque;"><input type='checkbox' ng-model='reg.transferStatus.waitlist' style='margin-right:8px' ng-change='updateProperty(reg._id, "transferStatus.waitlist", reg.transferStatus.waitlist)' />{{formatBool(reg.transferStatus.waitlist)}}</td>
+			<td ng-show='platform.isJugendsommer() || platform.isTest()' style="background-color:bisque;"><input type='checkbox' ng-model='reg.transferStatus.waitlist' style='margin-right:8px' ng-change='updateProperty(reg._id, "transferStatus.waitlist", reg.transferStatus.waitlist)' />{{formatBool(reg.transferStatus.waitlist)}}</td>-->
 			<td>{{reg.receiptNumber}}</td>
 			<td align="right">{{calculateFee(reg)}}</td>
 			<td ng-show='platform.isKiso()'>{{formatBool(reg.acceptsOptionalFee)}}</td>
@@ -267,9 +267,9 @@
 			<td ng-show='platform.isJDUL()'>{{reg.commentInternal}}</td>
 			<td>{{formatBool(reg.acceptsMediaPublication)}}</td>
 			<td ng-show='platform.isKiso()'>{{formatBool(reg.acceptsNewsletter)}}</td>
-			<td ng-show='platform.isJugendsommer()'>{{formatBool(reg.hasOwnEBike)}}</td>
+			<!-- <td ng-show='platform.isJugendsommer()'>{{formatBool(reg.hasOwnEBike)}}</td>
 			<td ng-show='platform.isJugendsommer()'>{{reg.heightChild}}</td>
-			<td ng-show='platform.isJugendsommer()'>{{reg.instrument}}</td>
+			<td ng-show='platform.isJugendsommer()'>{{reg.instrument}}</td> -->
 			<td ng-show='platform.isJugendsommer()'>{{reg.preferredFellow}}</td>
 			<td ng-show='platform.isJDUL()'>{{formatBool(reg.covidRules.isPrioWork)}}</td>
 			<td ng-show='platform.isJDUL()'>{{formatBool(reg.covidRules.isPrioSocial)}}</td>
