bug fix report typo

--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -243,7 +243,7 @@
 			<td align="right">{{calculateFee(reg)}}</td>
 			<td ng-show='platform.isKiso()'>{{formatBool(reg.acceptsOptionalFee)}}</td>
 			<td ng-show='platform.isKiso()'>{{formatBool(reg.isSiblingReservation)}}</td>
-			<td ng-show='platform.isKiso()'>{{formatBool(reg.asksForReduction}}</td>
+			<td ng-show='platform.isKiso()'>{{formatBool(reg.asksForReduction)}}</td>
 			<td>{{reg.birthdayChild | date: 'dd/MM/yyyy'}}</td>
 			<td>{{reg.schoolChild}}</td>
 			<!-- <td>{{reg.healthChild}}</td> -->
