confirmation jdul when

--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -387,7 +387,7 @@
 						</div>
 						<div ng-show="(platform.isTest() || platform.isKiso())">
 							<input type='checkbox' name='reducedpayment' ng-model='asksForReduction'><strong>{{"RESERVATION.LABEL_ASKREDUCTION" | translate}}</strong></input>
-						</div>"
+						</div>
 						<br />
 						<!--<input type='checkbox' name='agb' ng-model='acceptAGB'><strong>{{"RESERVATION.LABEL_TERMS1" | translate}}<button type="button" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg">{{"RESERVATION.LABEL_TERMS2" | translate}}</button></strong></input>-->
 						<input type='checkbox' name='agb' ng-model='acceptAGB'><strong>{{"RESERVATION.LABEL_TERMS1" | translate}}<button type="button" class="btn btn-default" ng-click="toggleAgb()" >{{"RESERVATION.LABEL_TERMS2" | translate}}</button></strong><strong>{{"RESERVATION.LABEL_TERMS3" | translate}}</strong><button type="button" class="btn btn-default" ng-click="toggleMedia()" >{{"RESERVATION.LABEL_TERMS4" | translate}}</button><strong>{{"RESERVATION.LABEL_TERMS5" | translate}}</strong></input>
