--- a/public/templates/myRegistrations.html
+++ b/public/templates/myRegistrations.html
@@ -44,7 +44,7 @@
 			<td><a href='/#/editOwnRegistration/{{reg._id}}' class="btn btn-success btn-small glyphicon glyphicon-pencil" type="button"><div style="font-size: 60%"><br />Editieren</div></a></td>
 			<td ng-show='!(platform.isJDUL() || platform.isTest())'><button  ng-class='{"disabled": !reg.isPaymentDone}' class="btn btn-info btn-small glyphicon glyphicon-file" type="button" ng-click="downloadConfirmation(reg._id, 'de')"><div style="font-size:60%"><br />Download</div></button></td>
 			<td ng-show='(platform.isJDUL()  || platform.isTest())'>
-				<button  ng-class='{"disabled": !reg.isPaymentDone || Date.now() < new Date("2021-03-21")}' class="btn btn-info btn-small glyphicon glyphicon-file" type="button" ng-click="downloadConfirmation(reg._id, confirmationLang)"><div style="font-size:60%"><br />Download</div></button>
+				<button  ng-class='{"disabled": !reg.isPaymentDone || (reg.isPaymentDone && Date.now() < new Date("2021-03-21"))}' class="btn btn-info btn-small glyphicon glyphicon-file" type="button" ng-click="downloadConfirmation(reg._id, confirmationLang)"><div style="font-size:60%"><br />Download</div></button>
 			</td>
 
 			<td ng-show='platform.isJDUL() || platform.isTest()'><button type="button" class="btn glyphicon glyphicon-trash" ng-click='deleteRegistration(reg._id)'></button></td>
