--- a/public/templates/shop/reservation.html
+++ b/public/templates/shop/reservation.html
@@ -79,6 +79,8 @@
                                     button-label="icon name"
                                     item-label="icon name description type"
                                     tick-property="ticked"
+                                    disable-property="disabled"
+                                    group-property="msGroup"
                                 ></div>
                                 <!--<label for='typeFilter' class='control-label col-sm-2'>Type:</label>
                                 <div class='col-sm-5 input-group'>
@@ -99,43 +101,43 @@
                                     <input type="number" id='countFilter' class='form-control' ng-model='count' min="1" step="1" ng-disabled="type === 'Bus'"></input>
                                 </div>
                                 <br />-->
-                                <div ng-show="type === 'Bus'" class="container">
-                                    <!-- START -->
+                                <!--<div ng-show="type === 'Bus'" class="container">
+                                    
                                     <div class='form-group' ng-class='{ "has-error": reservationForm.start.$invalid }'>
                                         <label for='start' class='control-label col-sm-2'>Ausgangspunkt</label>
                                         <div class='col-sm-8'>
                                             <input name='start' type='text' ng-model='start' class='form-control'></input>
                                         </div>
                                     </div>
-                                    <!-- DESTINATION -->
+                                    
                                     <div class='form-group' ng-class='{ "has-error": reservationForm.destination.$invalid }'>
                                         <label for='destination' class='control-label col-sm-2'>Ziel</label>
                                         <div class='col-sm-8'>
                                             <input name='destination' type='text' ng-model='destination' class='form-control' ></input>
                                         </div>
                                     </div>
-                                    <!-- STARTTIME -->
+                                    
                                     <div class='form-group' ng-class='{ "has-error": reservationForm.startTime.$invalid }'>
                                         <label for='startTime' class='control-label col-sm-2'>Start-Zeit</label>
                                         <div class='col-sm-8'>
                                             <input name='startTime' type='string' ng-model='startTime' class='form-control'></input>
                                         </div>
                                     </div>
-                                    <!-- STARTTIME -->
+                                    
                                     <div class='form-group' ng-class='{ "has-error": reservationForm.endTime.$invalid }'>
                                         <label for='endTime' class='control-label col-sm-2'>End-Zeit</label>
                                         <div class='col-sm-8'>
                                             <input name='endTime' type='string' ng-model='endTime' class='form-control'></input>
                                         </div>
                                     </div>
-                                    <!-- PARTICIPANTS -->
+                                    
                                     <div class='form-group' ng-class='{ "has-error": reservationForm.participants.$invalid }'>
                                         <label for='participants' class='control-label col-sm-2'>Teilnehmer/in</label>
                                         <div class='col-sm-8'>
                                             <input name='participants' type='number' ng-model='participants' class='form-control'></input>
                                         </div>
                                     </div>
-                                </div>
+                                </div>-->
 
                                 <br />
                                 <button class='btn btn-lg btn-success' ng-click='setState(3)' ng-disabled='!IsSecondTabComplete()'>
@@ -146,7 +148,7 @@
                     </div>
                 
 
-                    <div ng-show="article === 'VW Caravell'" style="margin: 10px" class="row alert alert-danger" role="alert">
+                    <!--<div ng-show="article === 'VW Caravell'" style="margin: 10px" class="row alert alert-danger" role="alert">
                         <h3>Verleihbestimmung VW-Bus</h3>
                         <p>
                             <ul>
@@ -160,7 +162,7 @@
                             <li>Der Mieter übernimmt die volle Haftung für alle Schäden, die nicht von der Versicherung gedeckt werden. Strafzettel werden vom jeweiligen Fahrer selbst getragen. Falls ein Unfall passiert und der Schaden der Versicherung gemeldet werden muss, ist ein Protokoll der Carabinieri - oder der Straßenpolizei erforderlich, ansonsten muss der Schaden vom Entleiher selbst getragen werden.</li>
                             </ul>
                         </p>
-                    </div>
+                    </div>-->
                 </div>
             </div>
             <div class="panel panel-default">
@@ -173,8 +175,8 @@
                         <div class="row" ng-show="!bookingRequestSent">
                         <div><strong>Zusammefassung</strong></div>
                         <table style="border: 1px solid gray; border-collapse: collapse;">
-                            <tr><td style="padding: 2px">Artikel</td><td style="padding: 2px">{{article}}</td></tr>
-                            <tr><td style="padding: 2px">Einsatzort</td><td style="padding: 2px">{{location}}</td></tr>
+                            <tr><td style="padding: 2px">Artikel</td><td style="padding: 2px">{{selectedArticles}}</td></tr>
+                            <!--<tr><td style="padding: 2px">Einsatzort</td><td style="padding: 2px">{{location}}</td></tr>-->
                             <tr><td style="padding: 2px">Ausleiher/in</td><td style="padding: 2px">{{lender}}</td></tr>
                             <tr><td style="padding: 2px">Tel.Nr. Kontakt</td><td style="padding: 2px">{{phoneNumber}}</td></tr>
                             <tr><td style="padding: 2px">Von</td><td style="padding: 2px">{{from}}</td></tr>
