--- a/public/templates/myRegistrations.html
+++ b/public/templates/myRegistrations.html
@@ -42,8 +42,8 @@
 			<td><a href='mailto:{{reg.emailParent}}'>{{reg.emailParent}}</a></td>
 			<td>{{reg.phoneNumberParent}}</td>
 			<td><a href='/#/editOwnRegistration/{{reg._id}}' class="btn btn-success btn-small glyphicon glyphicon-pencil" type="button"><div style="font-size: 60%"><br />Editieren</div></a></td>
-			<td ng-show='!(platform.isJDUL() || platform.isTest())'><button  ng-class='{"disabled": !reg.isPaymentDone}' class="btn btn-info btn-small glyphicon glyphicon-file" type="button" ng-click="downloadConfirmation(reg._id, 'de')"><div style="font-size:60%"><br />Download</div></button></td>
-			<td ng-show='(platform.isJDUL()  || platform.isTest())'>
+			<td ng-show='!(platform.isJDUL())'><button  ng-class='{"disabled": !reg.isPaymentDone}' class="btn btn-info btn-small glyphicon glyphicon-file" type="button" ng-click="downloadConfirmation(reg, reg._id, 'de')"><div style="font-size:60%"><br />Download</div></button></td>
+			<td ng-show='(platform.isJDUL())'>
 				<button  ng-class='{"disabled": isDownloadDisabled(reg)}' class="btn btn-info btn-small glyphicon glyphicon-file" type="button" ng-click="downloadConfirmation(reg, reg._id, confirmationLang)"><div style="font-size:60%"><br />Download</div></button>
 			</td>
 
