ds description jdul

--- a/public/templates/agb/ds-jdbl-de.html
+++ b/public/templates/agb/ds-jdbl-de.html
@@ -68,11 +68,25 @@
 							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
 						</tr>
 						<tr>
+							<td></td>
+							<td>Art. 6, Abs. 1, Buchst. c) – von den Förderkriterien der Provinz Bozen-Familienagentur für die Durchführung von Umfragen zur Einhaltung von Qualitätsstandards vorgesehen.</td>
+							<td>Zwei Jahre nach Beendigung des Programms</td>
+							<td>Autonome Provinz Bozen (Familienagentur)</td>
+							<td>Art. 6, Abs. 1, Buchst. c): Die Förderkriterien der Autonomen Provinz Bozen sehen vor, dass diese Evaluierungen über die Einhaltung von Qualitätsstandards durchführen kann. Die Autonome Provinz Bozen wird bei den Teilnehmern Umfragen zur Qualität des angebotenen Progamms durchführen.</td>
+						</tr>
+						<tr>
 							<td>Vor- und Nachname der Eltern / erziehungsberechtigten Personen</td>
 							<td>Art. 6, Abs. 1, Buchst. b) – notwendig für die Kontaktierung der Eltern / erziehungsberechtigten Personen des Teilnehmers im Bedarfsfal</td>
 							<td>Ende des darauffolgenden Kalenderjahre</td>
 							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
 							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+						</tr>
+						<tr>
+							<td></td>
+							<td>Art. 6, Abs. 1, Buchst. c) – von den Förderkriterien der Provinz Bozen-Familienagentur für die Durchführung von Umfragen zur Einhaltung von Qualitätsstandards vorgesehen.</td>
+							<td>Zwei Jahre nach Beendigung des Programms</td>
+							<td>Autonome Provinz Bozen (Familienagentur)</td>
+							<td>Art. 6, Abs. 1, Buchst. c): Die Förderkriterien der Autonomen Provinz Bozen sehen vor, dass diese Evaluierungen über die Einhaltung von Qualitätsstandards durchführen kann. Die Autonome Provinz Bozen wird bei den Teilnehmern Umfragen zur Qualität des angebotenen Progamms durchführen.</td>
 						</tr>
 						<tr>
 							<td>Vor- und Nachname des Notfallkontakts (falls nicht Eltern / erziehungsberechtigten Personen)</td>
@@ -122,6 +136,13 @@
 							<td>Die Daten werden für die Zusendung des Programmkatalogs für kommende Jahre gespeichert, um die Eltern / erziehungsberechtigten Personen über die nächsten Sommerprogramme zu informieren. Diese Daten werden bei Ausübung Recht auf Löschung gelöscht</td>
 							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
 							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+						</tr>
+						<tr>
+							<td></td>
+							<td>Art. 6, Abs. 1, Buchst. c) – von den Förderkriterien der Provinz Bozen-Familienagentur für die Durchführung von Umfragen zur Einhaltung von Qualitätsstandards vorgesehen.</td>
+							<td>Zwei Jahre nach Beendigung des Programms</td>
+							<td>Autonome Provinz Bozen (Familienagentur)</td>
+							<td>Art. 6, Abs. 1, Buchst. c): Die Förderkriterien der Autonomen Provinz Bozen sehen vor, dass diese Evaluierungen über die Einhaltung von Qualitätsstandards durchführen kann. Die Autonome Provinz Bozen wird bei den Teilnehmern Umfragen zur Qualität des angebotenen Progamms durchführen.</td>
 						</tr>
 						</tbody>
 						</table>
