--- a/public/templates/agb/ds-jdbl-it.html
+++ b/public/templates/agb/ds-jdbl-it.html
@@ -67,11 +67,25 @@
 							<td>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto apposito con il respon-sabile del trattamento</td>
 						</tr>
 						<tr>
+							<td></td>
+							<td>Art. 6, c. 1, lett. c) – previsto dalla normativa provinciale (Agenzia per la famiglia) sui sussidi e contributi ai fini di eseguire sondaggi e inchieste sul rispetto degli standard qualitativi prefissati.</td>
+							<td>Due anni dalla fine del programma</td>
+							<td>Provincia Autonoma di Bolzano (Agenzia per la famiglia)</td>
+							<td>Art. 6, c. 1, lett. c) – la normativa provinciale (Agenzia per la famiglia) sui sussidi e contributi prevede che tale ente può eseguire sondaggi e inchieste in merito al rispetto degli standard qualitativi prefissati.  La Provincia Autonoma di Bolzano esegue sondaggi presso i partecipanti del programma sulla qualità del servizio offerto.</td>
+						</tr>
+						<tr>
 							<td>Nome e cognome dei genitori / esercenti potestà genitoriale</td>
 							<td>Art. 6, comma 1, lettera b) - necessa-rio per contattare i genitori/ esercenti potestà genitoriale del partecipante in caso di necessità</td>
 							<td>Fine dell'anno solare successivo alla partecipazione</td>
 							<td>Il programma di registrazione online viene eseguito tramite un server noleggiato che si trova in Austria</td>
 							<td>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto apposito con il respon-sabile del trattamento</td>
+						</tr>
+						<tr>
+							<td></td>
+							<td>Art. 6, c. 1, lett. c) – previsto dalla normativa provinciale (Agenzia per la famiglia) sui sussidi e contributi ai fini di eseguire sondaggi e inchieste sul rispetto degli standard qualitativi prefissati.</td>
+							<td>Due anni dalla fine del programma</td>
+							<td>Provincia Autonoma di Bolzano (Agenzia per la famiglia)</td>
+							<td>Art. 6, c. 1, lett. c) – la normativa provinciale (Agenzia per la famiglia) sui sussidi e contributi prevede che tale ente può eseguire sondaggi e inchieste in merito al rispetto degli standard qualitativi prefissati.  La Provincia Autonoma di Bolzano esegue sondaggi presso i partecipanti del programma sulla qualità del servizio offerto.</td>
 						</tr>
 						<tr>
 							<td>Nome e cognome del contatto di emergenza (se non i genitori/ esercenti potestà genitoriale )</td>
@@ -121,6 +135,13 @@
 							<td>I dati saranno conser-vati per l'invio del prospetto informativo degli anni seguenti, al fine di informare i genitori/tutori sui prossimi programmi estivi. Tali dati verranno cancellati in caso di esercizio del diritto di cancellazione</td>
 							<td>Il programma di registrazione online viene eseguito tramite un server noleggiato che si trova in Austria</td>
 							<td>Articolo 6, paragrafo 1, lettere b) e c), in combinato disposto con l'articolo 28 - la trasmissione è effettuata sulla base di un contratto apposito con il respon-sabile del trattamento</td>
+						</tr>
+						<tr>
+							<td></td>
+							<td>Art. 6, c. 1, lett. c) – previsto dalla normativa provinciale (Agenzia per la famiglia) sui sussidi e contributi ai fini di eseguire sondaggi e inchieste sul rispetto degli standard qualitativi prefissati.</td>
+							<td>Due anni dalla fine del programma</td>
+							<td>Provincia Autonoma di Bolzano (Agenzia per la famiglia)</td>
+							<td>Art. 6, c. 1, lett. c) – la normativa provinciale (Agenzia per la famiglia) sui sussidi e contributi prevede che tale ente può eseguire sondaggi e inchieste in merito al rispetto degli standard qualitativi prefissati.  La Provincia Autonoma di Bolzano esegue sondaggi presso i partecipanti del programma sulla qualità del servizio offerto.</td>
 						</tr>
 						</tbody>
 						</table>
