--- a/public/templates/shop/articleEdit.html
+++ b/public/templates/shop/articleEdit.html
@@ -21,12 +21,12 @@
                 </div>
             </div>
             <!-- LOCATION -->
-            <div class='form-group' ng-class='{ "has-error": articleForm.location.$invalid }'>
+            <!-- <div class='form-group' ng-class='{ "has-error": articleForm.location.$invalid }'>
                 <label for='location' class='control-label col-sm-2'>Standort</label>
                 <div class='col-sm-10'>
                     <input name='location' type='text' ng-model='location' required class='form-control'></input>
                 </div>
-            </div>
+            </div> -->
             <!-- TYPE -->
             <div class='form-group' ng-class='{ "has-error": articleForm.type.$invalid }'>
                 <label for='type' class='control-label col-sm-2'>Typ</label>
@@ -42,25 +42,25 @@
                 </div>
             </div>
             <!-- ISSET -->
-            <div class='form-group' ng-class='{ "has-error": articleForm.isSet.$invalid }'>
+            <!-- <div class='form-group' ng-class='{ "has-error": articleForm.isSet.$invalid }'>
                 <label for='isInSet' class='control-label col-sm-2'>Teil eines Sets</label>
                 <div class='col-sm-10'>
                     <p class='input-group'>
                         <label class='checkbox-inline'><input type='checkbox' ng-model='isInSet' /></label>
                     </p>
                 </div>
-            </div>
+            </div> -->
             <!-- ISSET -->
-            <div class='form-group' ng-class='{ "has-error": articleForm.isSet.$invalid }'>
+            <!-- <div class='form-group' ng-class='{ "has-error": articleForm.isSet.$invalid }'>
                 <label for='isSet' class='control-label col-sm-2'>Set</label>
                 <div class='col-sm-10'>
                     <p class='input-group'>
                        <label class='checkbox-inline'><input type='checkbox' ng-model='isSet' disabled /></label>
                     </p>
                 </div>
-            </div>
+            </div> -->
             <!-- ARTICLES -->
-            <div class="dropdown col-sm-10 col-sm-offset-2" ng-show="isSet">
+            <!-- <div class="dropdown col-sm-10 col-sm-offset-2" ng-show="isSet">
                 <select ng-disabled="!isSet" aria-labelledby="dropdownArticles" ng-model="selectedArticle" ng-change="addToArticles(selectedArticle)" ng-options="a.code + ' ' + a.name for a in allArticles" style="min-width: 200px">
                 </select>
                 <label class='control-label'>Artikel hinzufügen</label>
@@ -76,7 +76,7 @@
                        </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <br />
 	        <div class='col-sm-offset-2 col-sm-10'>
